Доработка Swagger
Добавлены в swagger след инпоинты :
- CreateItem
- GetAllItems
- GetItemByID
- UpdateItem
- DeleteItem
