# pkg/handler/item.go
@@ -7,6 +7,20 @@ import (
 	"strconv"
 )
 
+// @Summary CreateItem
+// @Security ApiKeyAuth
+// @Tags items
+// @Description create todo item
+// @ID create-item
+// @Accept json
+// @Produce json
+// @Param id path int true "list id"
+// @Param input body todo.TodoItem true "item info"
+// @Success 200 {integer} integer 1
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/lists/{id}/items [post]
 func (h *Handler) createItem(ctx *gin.Context) {
 	userID, err := getUserID(ctx)
 	if err != nil {
@@ -36,6 +50,23 @@ func (h *Handler) createItem(ctx *gin.Context) {
 	})
 }
 
+type getAllItemsResponse struct {
+	Data []todo.TodoItem `json:"data"`
+}
+
+// @Summary GetAllItems
+// @Security ApiKeyAuth
+// @Tags items
+// @Description get all todo items
+// @ID get-all-items
+// @Accept json
+// @Produce json
+// @Param id path int true "list id"
+// @Success 200 {object} getAllItemsResponse
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/lists/{id}/items [get]
 func (h *Handler) getAllItems(ctx *gin.Context) {
 	userID, err := getUserID(ctx)
 	if err != nil {
@@ -54,9 +85,24 @@ func (h *Handler) getAllItems(ctx *gin.Context) {
 		newErrorResponse(ctx, http.StatusInternalServerError, "getAllItems | "+err.Error())
 		return
 	}
-	ctx.JSON(http.StatusOK, items)
+	ctx.JSON(http.StatusOK, getAllItemsResponse{
+		Data: items,
+	})
 }
 
+// @Summary GetItemByID
+// @Security ApiKeyAuth
+// @Tags items
+// @Description get todo Item
+// @ID get-item-by-id
+// @Accept json
+// @Produce json
+// @Param item_id path int true "item id"
+// @Success 200 {object} todo.TodoItem
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/items/{item_id} [get]
 func (h *Handler) getItemByID(ctx *gin.Context) {
 	userID, err := getUserID(ctx)
 	if err != nil {
@@ -77,6 +123,20 @@ func (h *Handler) getItemByID(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, list)
 }
 
+// @Summary UpdateItem
+// @Security ApiKeyAuth
+// @Tags items
+// @Description update todo Item
+// @ID update-item
+// @Accept json
+// @Produce json
+// @Param item_id path int true "item id"
+// @Param input body todo.UpdateItemInput true "item info"
+// @Success 200 {object} statusResponse
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/items/{item_id} [put]
 func (h *Handler) updateItem(ctx *gin.Context) {
 
 	userID, err := getUserID(ctx)
@@ -107,6 +167,18 @@ func (h *Handler) updateItem(ctx *gin.Context) {
 
 }
 
+// @Summary DeleteItem
+// @Security ApiKeyAuth
+// @Tags items
+// @Description delete todo Item
+// @ID delete-item
+// @Produce json
+// @Param id path int true "item id"
+// @Success 200 {object} statusResponse
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/items/{id} [delete]
 func (h *Handler) deleteItem(ctx *gin.Context) {
 	userID, err := getUserID(ctx)
 	if err != nil {
